[package]
name = "week3"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bit-array = "0.4.4"
blake3 = "1.3.3"
openssl = { version = "0.10", features = ["vendored"] }
rand = "0.8.5"
random-string = "1.0"
sha2 = "0.10.6"
sha3 = "0.10.6"
typenum = "1.16.0"
cbc-mac = "0.1.1"
hex-literal = "0.3.4"

[dev-dependencies]
# Benchmarking
criterion = "0.4.0"

[[bench]]
name = "week3"
harness = false
